# rapidfab

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_REPORT_M0_PHASE4.md  IMPLEMENTATION_REPORT_M0_PHASE5.md  Makefile  PLAN.md  README.md  Taskfile.yml  codex-debug-http500-init-endpoint.md  docker-compose.minimal.yml  docker-compose.obs.yml  docker-compose.yml  docker-compose.yml.backup  schema.sql
services/_template/: Cargo.toml  Containerfile  Makefile  README.md  TEMPLATE_USAGE.md
services/_template/docs/: INDEX.md
services/_template/src/: main.rs
services/api/: .env.example  Cargo.toml  Containerfile  Makefile  QUICK_RESTORE.md  README.md  docker-entrypoint.sh
services/api/.sqlx/: query-00df37c6d51455b37833a0d9bf142cc6142fa2e3384a08542b02c56e5fa115a3.json  query-3f8b8656b968711657c269c080f739c0df4a81eef7ac98591be67a05088eb386.json  query-7b52a4d6612180cf273a1dd721e47729daeace6feb060e5aad029551ee7545a1.json  query-8d86a68674b2ed277a61bd12278dffa5e65b41f2be14d9631a30e02b8e75b415.json  query-aa13a3b460e08def800cf2641d883a7c516232adae4571d9c597f4037b0058b6.json  query-e9e5f4eb1f1cc78283ed94d3f73458d4ac3761b08b232d4eeda080c394ef3c45.json
services/api/docs/: ARCHITECTURE.md  AUTH.md  DATABASE.md  INDEX.md  SMOKE_TEST_REPORT.md  TEST_NOTES.md  USERS.md
services/api/migrations/: 001_create_users_table.sql  002_create_sessions_table.sql  004_create_files_table.sql  006_create_ip_quotas_table.sql
services/api/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
services/api/src/app/: mod.rs  session.rs
services/api/src/app/auth/: dto.rs  mod.rs  repository.rs  routes.rs  service.rs
services/api/src/app/health/: dto.rs  routes.rs
services/api/src/app/metrics/: mod.rs  prometheus.rs  routes.rs
services/api/src/middleware/: metrics.rs  session.rs
services/api/tests/: health_test.rs  integration_test.rs  security_test.rs
services/pricing-fdm/: Cargo.toml  Containerfile  Makefile  README.md
services/pricing-fdm/profiles/: filament_pla.json  machine.json  process_standard.json
services/pricing-fdm/src/: config.rs  lib.rs  main.rs
services/pricing-fdm/src/app/: dto.rs  handlers.rs  mod.rs  pricing.rs
services/pricing-fdm/src/slicer/: mod.rs  orca.rs  parser.rs
services/pricing-fdm/src/utils/: download.rs
services/upload/: Cargo.toml  Containerfile  Makefile  README.md
services/upload/.sqlx/: query-1d5e4e1b0f988580a20649e60a552b1495d8e2601c55ff53252c9bae9e78caa5.json  query-24013b7b918c700a42dbd5311d7dcf79b8991a51da1db6365b0509ee79d41045.json  query-3be4f77821914a13b261f47431f6b1a06a567b1e6c39397fcf5ae783416bc980.json  query-5ac5af279079da35863517a33f5c0dde79c36cb3c9805fe0abce04f5b5679dbe.json  query-5c9605f852e4a5beef95529b27737fce0a1b0a4ee48e0b3bc9b580a8dafaedf3.json  query-7465ac6aaccba5b04c11b798c6632cb7f6badc3e0ff9de548df9771a0fd22a24.json  query-7e6d07a91de31213ade533311c9841078f5c33ebb5bf323dec930f89df1a3e48.json  query-82e18e4bbb04ecc087166afee7cba241b69fc81537faf85b65a7c7e45f907265.json  query-874956f82d0172ec9709210d4b10d952a342baed7e70adbcfd39fca1e923ea9b.json  query-896d8765f41ab7984da6991a0539036c765a89517398be4ce51ce96b6606d668.json  query-bc28730b319c4c55219631d69c69a974c315edea227a3c63e3b1ada7b20893d9.json  query-c54cb49735858932f1b9f45fc3b3aa902cdb669ff35c0acb0a6655fb06a6f8b6.json  query-df3b6cc28beb38b942c18ea257bed5927d494888a3e5717597974cd75eb58c5c.json
services/upload/docs/: INDEX.md  S3_LIFECYCLE.md
services/upload/migrations/: 001_create_uploads_table.sql  002_create_files_table.sql  003_create_upload_quotas_table.sql
services/upload/src/: config.rs  lib.rs  main.rs  metrics.rs
services/upload/src/app/: dto.rs  handlers.rs  service.rs
services/upload/src/auth/: internal_token.rs  mod.rs  ticket.rs
services/upload/src/storage/: mod.rs  quota.rs  s3_client.rs
services/upload/tests/: .gitkeep  integration_test.rs
(+73 files in other folders)
