[package]
name = "template-service"
version = "0.1.0"
edition = "2021"

# TODO: Replace with your service name and update binary name below

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Config
dotenvy = "0.15"

# TODO: Add service-specific dependencies below (e.g., sqlx, redis, etc.)
