[package]
name = "pricing-fdm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full", "process"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Config
dotenvy = "0.15"

# HTTP client (for S3 presigned URLs)
reqwest = { version = "0.11", features = ["stream"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
regex = "1.10"
lazy_static = "1.4"
zip = "0.6"

# Metrics
prometheus = "0.13"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
