[package]
name = "upload-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "upload-service"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Config
dotenvy = "0.15"

# S3 integration
aws-sdk-s3 = "1.60"
aws-config = "1.5"

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "uuid"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# JWT/Auth
jsonwebtoken = "9"

# Metrics
prometheus = "0.13"
once_cell = "1.19"
